--- a/BOSTON-GEO.ipynb
+++ b/BOSTON-GEO.ipynb
@@ -12,6 +12,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![boston](boston.jpg \"Title\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## I. Introduction    \n",
     "Boston is the capital and most populous city of the Commonwealth of Massachusetts in the United States, as well as the 21st most populous city in the United States. Boston is one of the oldest municipalities in the United States, founded on the Shawmut Peninsula in 1630 by Puritan settlers from England. Today, Boston is a thriving port city. The Boston area's many colleges and universities make it an international center of higher education, including law, medicine, engineering, and business, and the city is considered to be a world leader in innovation and entrepreneurship, with nearly 2,000 startups.\n",
     "Along with its long history, food is a quintessential component of New York City. Cuisine in Boston is similar to the rest of New England cuisine, in that it has a large emphasis on seafood and dairy products. Its best-known dishes are New England clam chowder, fish and chips (usually with cod or scrod), baked beans, lobsters, steamed clams, and fried clams.      \n",
@@ -6564,7 +6571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -6578,7 +6585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
